--- a/Remidomo/res/layout-v14/energy.xml
+++ b/Remidomo/res/layout-v14/energy.xml
@@ -114,7 +114,7 @@
 
         </LinearLayout>
 
-    	<com.remi.remidomo.reloaded.SensorPlot
+    	<com.remi.remidomo.reloaded.views.SensorPlot
     		android:id="@+id/energyPlot"
     		android:layout_width="fill_parent"
     		android:layout_height="550px"
