Add power info to Server dashboard

--- a/Remidomo/Server/src/main/res/layout/dashboard.xml
+++ b/Remidomo/Server/src/main/res/layout/dashboard.xml
@@ -332,6 +332,7 @@
 
         <!-- Instant energy -->
         <RelativeLayout
+            android:id="@+id/power_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/switch_layout"
